fixed aligning with the stats columns to better match the image

--- a/style.css
+++ b/style.css
@@ -89,11 +89,14 @@ body {
   margin-bottom: 30px;
 }
 
-.stats .stat {
+.stats {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+}
+
+.stats .stat {
   text-align: center;
 }
 
